// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`restore history from sessionStorage 1`] = `
Object {
  "basename": "",
  "direction": "forward",
  "entries": Array [
    Object {
      "basename": "",
      "hash": "",
      "key": "345678",
      "pathname": "/",
      "search": "",
      "state": Object {},
      "url": "/",
    },
    Object {
      "basename": "",
      "hash": "",
      "key": "345678",
      "pathname": "/second",
      "search": "",
      "state": Object {},
      "url": "/second",
    },
  ],
  "from": null,
  "hash": "",
  "index": 1,
  "kind": "load",
  "length": 2,
  "params": Object {},
  "pathname": "/second",
  "pop": false,
  "prev": Object {
    "basename": "",
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": Object {},
        "url": "/",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "hash": "",
    "index": 1,
    "kind": "back",
    "length": 2,
    "params": Object {},
    "pathname": "/second",
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "SECOND",
    "url": "/second",
  },
  "query": Object {},
  "scene": "",
  "search": "",
  "state": Object {},
  "status": 200,
  "type": "SECOND",
  "universal": false,
  "url": "/second",
}
`;

exports[`restore history from sessionStorage:  - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "state": Object {},
    "url": "/",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
]
`;

exports[`restore history from sessionStorage:  - history_index 1`] = `0`;

exports[`restore history from sessionStorage:  - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": Object {},
        "url": "/",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "index": 0,
    "kind": "back",
    "length": 2,
    "pathname": "/",
    "pop": true,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/",
          "search": "",
          "state": Object {},
          "url": "/",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": Object {},
          "url": "/second",
        },
      ],
      "hash": "",
      "index": 1,
      "kind": "load",
      "length": 2,
      "params": Object {},
      "pathname": "/second",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "SECOND",
      "url": "/second",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "FIRST",
}
`;

exports[`restore history from sessionStorage:  - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`restore history from sessionStorage:  - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`restore history from sessionStorage:  - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": Object {},
        "url": "/",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "back",
    "length": 2,
    "params": Object {},
    "pathname": "/",
    "pop": true,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/",
          "search": "",
          "state": Object {},
          "url": "/",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": Object {},
          "url": "/second",
        },
      ],
      "hash": "",
      "index": 1,
      "kind": "load",
      "length": 2,
      "params": Object {},
      "pathname": "/second",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "SECOND",
      "url": "/second",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/",
  },
  "title": "FIRST",
}
`;

exports[`restore history from sessionStorage:  - title 1`] = `"FIRST"`;
